tests/typechecker/pass/015-min.hyg
(min(1.0f, 3.0f)): float;
(min(1, 3)): int