tests/typechecker/fail/016-mod-float-arg.hyg
(4.0f % 3.0f): float